crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__error_placeholder_alone.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: _
---
Placeholder(
    1,
    1,
)
