crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__error_provide_body.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: provide Db = db
---
Provide(
    Body(
        Open(
            1,
            16,
        ),
        1,
        16,
    ),
    1,
    1,
)
