crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__error_provide_equals.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "provide Db { }"
---
Provide(
    Equals(
        1,
        12,
    ),
    1,
    1,
)
