crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__error_provide_name.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "provide db = x { }"
---
Provide(
    Name(
        1,
        9,
    ),
    1,
    1,
)
