crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__error_provide_value.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "provide Db = ) { }"
---
Provide(
    Value(
        Start(
            1,
            14,
        ),
        1,
        14,
    ),
    1,
    1,
)
