crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__error_unary_bad_operand_propagates.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "-\"x"
---
String(
    Endless,
    1,
    4,
)
