crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__expr_simple_var.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "Code:\n\nfoo"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: Var {
        kind: LowVar,
        name: "foo",
    },
}
